# u-index

./: .gitignore  CLAUDE.md  LICENSE  Pipfile  README.md  pyproject.toml
docs/manuscript/: references.bib  umeton_index_pnas.tex  umeton_index_preprint.md  umeton_index_preprint.tex
docs/plans/: 2026-01-18-uindex-cli-design.md  2026-01-18-uindex-implementation.md  2026-01-19-u-index-visualizations-design.md
examples/: u_index_visualizations.ipynb  u_index_visualizations.py
src/uindex/: __init__.py  cache.py  cli.py  core.py  openalex.py  pubmed.py
src/uindex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cache.py  test_cli.py  test_core.py  test_integration.py  test_openalex.py  test_pubmed.py
